--- a/views/window/microsoft-internet-explorer.html
+++ b/views/window/microsoft-internet-explorer.html
@@ -1,3 +1,46 @@
 <div class="window__microsoft__internet__explorer">
-	<h1>Hello World</h1>
+    <div class="ie-window">
+        <!-- Menu Bar -->
+        <div class="ie-window__menu-bar">
+            <span class="ie-window__menu-item">File</span>
+            <span class="ie-window__menu-item">Edit</span>
+            <span class="ie-window__menu-item">View</span>
+            <span class="ie-window__menu-item">Favorites</span>
+            <span class="ie-window__menu-item">Tools</span>
+            <span class="ie-window__menu-item">Help</span>
+        </div>
+
+        <!-- Toolbar -->
+        <div class="ie-window__toolbar">
+            <button class="ie-window__toolbar-button">Back</button>
+            <button class="ie-window__toolbar-button">Forward</button>
+            <button class="ie-window__toolbar-button">Stop</button>
+            <button class="ie-window__toolbar-button">Refresh</button>
+            <button class="ie-window__toolbar-button">Home</button>
+            <button class="ie-window__toolbar-button">Search</button>
+            <button class="ie-window__toolbar-button">Favorites</button>
+            <button class="ie-window__toolbar-button">History</button>
+            <button class="ie-window__toolbar-button">Mail</button>
+            <button class="ie-window__toolbar-button">Print</button>
+        </div>
+
+        <!-- Address Bar -->
+        <div class="ie-window__address-bar">
+            <span class="ie-window__address-label">Address:</span>
+            <input type="text" class="ie-window__address-input" value="http://www.example.com">
+            <button class="ie-window__address-button">Go</button>
+        </div>
+
+        <!-- Content Area -->
+        <div class="ie-window__content">
+            <!-- Google Search Box -->
+            <div class="ie-window__search-box">
+                <form class="ie-window__search-form">
+                    <input type="text" class="ie-window__search-input" placeholder="Search Google...">
+                    <button type="submit" class="ie-window__search-button">Google Search</button>
+                    <button type="submit" class="ie-window__search-button">I'm Feeling Lucky</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
