--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@
 	cursor: default;
 	image-rendering: pixelated;
 	box-sizing: border-box;
-	font-family: variables.$font-family;
+	font-family: variables.$font-family-1;
 	font-size: variables.$font-size-base;
 	color: variables.$text-color;
 	margin: 0;
