--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,16 @@
 @use "variables";
 @use "fonts";
+
 @use "windows95";
 @use "computer";
-
 
 *, *:before, *:after {
 	cursor: default;
 	image-rendering: pixelated;
 	box-sizing: border-box;
-	font-family: variables.$font-family-1;
-	font-size: variables.$font-size-base;
-	color: variables.$text-color;
+	// font-family: variables.$font-family-1;
+	// font-size: variables.$font-size-base;
+	// color: variables.$text-color;
 	margin: 0;
 	overflow: hidden;
 }
