--- a/scss/windows95.scss
+++ b/scss/windows95.scss
@@ -46,7 +46,7 @@
 		justify-content: space-around;
 		align-items: center;
 		text-align: center;
-		margin: variables.$margin-medium;
+		margin: 10px;
 		cursor: pointer;
 
 		.desktop__shortcut__icon {
