--- a/scss/windows95.scss
+++ b/scss/windows95.scss
@@ -1,9 +1,10 @@
 @use "variables";
-@use "mixins";
-
+@use "mixins" as *;
 @use "windows/microsoft-internet-explorer";
 
 #windows95 {
+    font-family: 'MS Sans Serif';
+    color: white;
 	width: 100vw;
 	height: 100vh;
 	background: variables.$windows95-desktop-background-color;
@@ -378,7 +379,7 @@
             }
 
             button {
-                @include mixins.windows95-button(80px);
+                @include windows95-button(80px);
                 position: absolute;
                 margin-right: 30px;
                 bottom: 10px;
