--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,17 +1,9 @@
-// Colors
-$text-color: #FFFFFF;
-$windows95-desktop-background-color: #008080;
-$windows95-gray-color: #c0c0c0;
-$background-color: #000000;
 $text-color: #FFFFFF;
 $red-color: #d20404;
 
-// Shadow
-$box-shadow: 0 -1px 0 #7f7f7f inset;
 
-// Button
-$button-color: $windows95-gray-color;
-$button-radius: 5px;
-
-// Taskbar
-$taskbar-height: 50px;
+$windows95-gray-color: #c0c0c0;
+$windows95-dark-blue-color: #000082;
+$windows95-desktop-background-color: #008080;
+$windows95-font-family: 'MS Sans Serif';
+$windows95-taskbar-height: 50px;
