--- a/css/style.css
+++ b/css/style.css
@@ -106,26 +106,6 @@
   color: black;
 }
 
-.window__x__btn,
-.window__underline__btn {
-  cursor: pointer;
-  background-color: #c0c0c0;
-  border-top: 2px solid #deebf3;
-  border-left: 2px solid #deebf3;
-  border-right: 2px solid black;
-  border-bottom: 2px solid black;
-  color: black;
-  position: relative;
-  transition: top 0.1s ease, left 0.1s ease;
-}
-.window__x__btn:active,
-.window__underline__btn:active {
-  border-top: 3px solid black;
-  border-left: 3px solid black;
-  border-bottom: 2px solid white;
-  border-right: 2px solid white;
-}
-
 .desktop {
   position: relative;
   height: calc(100vh - 50px);
@@ -163,27 +143,30 @@
   height: 100%;
 }
 .taskbar .taskbar__item--window {
-  height: 40px;
-  margin-left: 5px;
   border-top: 2px solid white;
   border-left: 2px solid white;
-  border-bottom: 3px solid black;
   border-right: 3px solid black;
+  border-bottom: 3px solid black;
+  height: 40px;
+  margin-left: 5px;
   padding: 0 5px;
   color: black;
   cursor: pointer;
 }
 .taskbar .taskbar__item--window.active {
-  border-top: 3px solid black;
-  border-left: 3px solid black;
-  border-bottom: 2px solid white;
+  border-top: 2px solid black;
+  border-left: 2px solid black;
   border-right: 2px solid white;
+  border-bottom: 2px solid white;
+}
+.taskbar .taskbar--start {
+  margin-left: 5px;
 }
 .taskbar .taskbar--start .checked {
   border-top: 3px solid black;
   border-left: 3px solid black;
-  border-bottom: 2px solid white;
   border-right: 2px solid white;
+  border-bottom: 2px solid white;
 }
 .taskbar .taskbar--clock {
   margin-left: auto;
@@ -193,10 +176,10 @@
   padding: 8px;
   font-size: 1.3em;
   color: black;
-  border-top: 3px solid gray;
-  border-left: 3px solid gray;
-  border-bottom: 2px solid white;
+  border-top: 2px solid gray;
+  border-left: 2px solid gray;
   border-right: 2px solid white;
+  border-bottom: 2px solid white;
 }
 .taskbar .taskbar__btn {
   display: flex;
@@ -207,14 +190,15 @@
   height: 80%;
   border-top: 2px solid white;
   border-left: 2px solid white;
-  border-bottom: 3px solid black;
   border-right: 3px solid black;
+  border-bottom: 3px solid black;
 }
 .taskbar .taskbar__btn .taskbar__btn__text {
   color: black;
-  font-size: 1.5em;
+  font-size: 1.7em;
   font-weight: bold;
   cursor: pointer;
+  font-family: "MS Sans Serif";
 }
 .taskbar .taskbar__btn .taskbar__btn__img {
   height: 45px;
@@ -227,12 +211,13 @@
   width: 275px;
   bottom: 50px;
   height: 400px;
-  border-top: 2px solid #deebf3;
-  border-left: 2px solid #deebf3;
+  border-top: 2px solid white;
+  border-left: 2px solid white;
   border-right: 2px solid black;
   border-bottom: 2px solid black;
   display: none;
   flex-direction: row;
+  overflow: visible;
 }
 .taskbar .taskbar__menu .taskbar__menu__side {
   background: #85888f;
@@ -262,6 +247,8 @@
   flex-direction: column;
   width: 100%;
   padding: 0;
+  position: relative;
+  overflow: visible;
 }
 .taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item {
   width: 100%;
@@ -271,16 +258,33 @@
   align-items: center;
   cursor: pointer;
 }
+.taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item:hover {
+  background-color: #000082;
+}
+.taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item:hover > .taskbar__menu__title,
+.taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item:hover > .taskbar__menu__title .text__underline {
+  color: white;
+}
+.taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item:hover > .taskbar__menu__arrowright {
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+  border-left: 7px solid white;
+}
+.taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item .text__underline {
+  cursor: pointer;
+}
 .taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item .taskbar__menu__icon {
   width: 70px;
   height: 60px;
   padding-left: 5px;
   padding-right: 5px;
   margin-left: 2px;
+  cursor: pointer;
 }
 .taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item .taskbar__menu__title {
   font-size: 18px;
   color: black;
+  cursor: pointer;
 }
 .taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__item .taskbar__menu__arrowright {
   border-top: 7px solid transparent;
@@ -288,13 +292,25 @@
   border-left: 7px solid black;
   margin-left: auto;
   margin-right: 15px;
+  cursor: pointer;
 }
 .taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__sub {
   position: absolute;
   display: none;
+  left: 98%;
+  top: -1px;
+  background: #c3c6cd;
+  width: 200px;
+  padding: 5px;
+  z-index: 10;
+  overflow: visible;
+  border-top: 2px solid white;
+  border-left: 2px solid white;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
 }
 .taskbar .taskbar__menu .taskbar__menu__list .taskbar__menu__sub--open {
-  display: flex;
+  display: block;
 }
 .taskbar .taskbar__menu--open {
   display: flex;
@@ -314,8 +330,8 @@
   overflow: hidden;
   border-top: 2px solid white;
   border-left: 2px solid white;
-  border-bottom: 3px solid black;
   border-right: 3px solid black;
+  border-bottom: 3px solid black;
 }
 .window .window__header {
   display: flex;
@@ -340,6 +356,25 @@
 .window .window__header .window__header__title .window__header__title-item {
   display: flex;
   align-items: center;
+}
+.window .window__header .window__header__title .window__x__btn,
+.window .window__header .window__header__title .window__underline__btn {
+  cursor: pointer;
+  background-color: #c0c0c0;
+  border-top: 2px solid white;
+  border-left: 2px solid white;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  color: black;
+  position: relative;
+  transition: top 0.1s ease, left 0.1s ease;
+}
+.window .window__header .window__header__title .window__x__btn:active,
+.window .window__header .window__header__title .window__underline__btn:active {
+  border-top: 3px solid white;
+  border-left: 3px solid white;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
 }
 .window .window__header .window__header__menu {
   width: 100%;
@@ -398,38 +433,23 @@
   width: 100%;
 }
 .window .window__section .window__about__internet__explorer button {
-  display: inline-block;
-  padding: 4px 12px;
-  font-family: "MS Sans Serif", Tahoma, sans-serif;
-  font-size: 12px;
-  font-weight: bold;
-  color: #000;
-  text-align: center;
-  text-decoration: none;
-  cursor: pointer;
+  border-top: 2px solid #deebf3;
+  border-left: 2px solid #deebf3;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
   background-color: #c0c0c0;
-  border: 2px solid #000;
-  border-top-color: #dfdfdf;
-  border-left-color: #dfdfdf;
-  border-right-color: #808080;
-  border-bottom-color: #808080;
-  width: 80px;
+  color: black;
+  cursor: pointer;
+  transition: top 0.1s ease, left 0.1s ease;
   position: absolute;
   margin-right: 30px;
   bottom: 10px;
 }
 .window .window__section .window__about__internet__explorer button:active {
-  border-top-color: #808080;
-  border-left-color: #808080;
-  border-right-color: #dfdfdf;
-  border-bottom-color: #dfdfdf;
-  background-color: #a0a0a0;
-}
-.window .window__section .window__about__internet__explorer button:hover {
-  background-color: #b0b0b0;
-}
-.window .window__section .window__about__internet__explorer button:focus {
-  outline: 1px dotted #000;
+  border-top: 2px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid white;
+  border-bottom: 2px solid white;
 }
 
 #ibm {
