--- a/scss/windows95.scss
+++ b/scss/windows95.scss
@@ -282,7 +282,7 @@
                 transition: top 0.1s ease, left 0.1s ease;
 
                 &:active {
-                    @include windows95-border(white, white, black, black, 3px, 2px);
+                    @include windows95-border(black, black, white, white, 3px, 2px);
                 }
             }
         }
